--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <main class="wrap" id="icerik">
     <article class="paper">
-      <figure class="fig"><img src="https://raw.githubusercontent.com/Tabirly/case-study-quick-cite-tool-tabirly/332b69df5040224d1183198d7108e433ae208e5c/image1.png" alt="image1.png"/></figure>
+      <figure class="fig"><img src="/332b69df5040224d1183198d7108e433ae208e5c/image1.png" alt="image1.png"/></figure>
       <div class="spacer"></div>
       <h1 id="case-study-tabirly-ekosisteminde-quick-cite-mimarisinin-teknik-analizi">Case Study: Tabirly Ekosisteminde &quot;Quick-Cite&quot; Mimarisinin Teknik Analizi</h1>
       <p><a href="https://tr.tabirly.com/" target="_blank" rel="noopener"><strong><u>https://tr.tabirly.com/</u></strong></a></p>
