--- a/index.html
+++ b/index.html
@@ -386,7 +386,30 @@
           <details class="fold">
             <summary><strong>Ekler (Görseller)</strong></summary>
             <div class="gallery">
-              <a class="thumb" href="assets/cover.png" target="_blank" rel="noopener"><img src="assets/image2.png" alt="" loading="lazy" decoding="async"></a><a class="thumb" href="assets/image2.png" target="_blank" rel="noopener"><img src="assets/image3.png" alt="" loading="lazy" decoding="async"></a><a class="thumb" href="assets/image3.png" target="_blank" rel="noopener"><img src="assets/tabirly-youtube-banner.jpg" alt="" loading="lazy" decoding="async"></a><a class="thumb" href="assets/tabirly-youtube-banner.jpg" target="_blank" rel="noopener"><img src="assets/image1.jpg" alt="" loading="lazy" decoding="async"></a><a class="thumb" href="assets/incite-tool-tabirly.png" target="_blank" rel="noopener"><img src="assets/image1.jpg" alt="" loading="lazy" decoding="async"></a><a class="thumb" href="assets/tabirly-logo-512.png" target="_blank" rel="noopener"><img src="assets/tabirly-logo-512.png" alt="" loading="lazy" decoding="async"></a><a class="thumb" href="assets/tabirly-youtube-banner.png" target="_blank" rel="noopener"><img src="assets/tabirly-youtube-banner.png" alt="" loading="lazy" decoding="async"></a>
+<a class="thumb" href="assets/cover.png" target="_blank" rel="noopener">
+  <img src="assets/cover.png" alt="Cover" loading="lazy" decoding="async">
+</a>
+
+<a class="thumb" href="assets/image1.png" target="_blank" rel="noopener">
+  <img src="assets/image1.png" alt="Görsel 1" loading="lazy" decoding="async">
+</a>
+
+<a class="thumb" href="assets/image2.png" target="_blank" rel="noopener">
+  <img src="assets/image2.png" alt="Görsel 2" loading="lazy" decoding="async">
+</a>
+
+<a class="thumb" href="assets/image3.jpg" target="_blank" rel="noopener">
+  <img src="assets/image3.jpg" alt="Görsel 3" loading="lazy" decoding="async">
+</a>
+
+<a class="thumb" href="assets/tabirly-logo-512.png" target="_blank" rel="noopener">
+  <img src="assets/tabirly-logo-512.png" alt="Tabirly Logo" loading="lazy" decoding="async">
+</a>
+
+<a class="thumb" href="assets/tabirly-youtube-banner.png" target="_blank" rel="noopener">
+  <img src="assets/tabirly-youtube-banner.png" alt="YouTube Banner" loading="lazy" decoding="async">
+</a>
+
             </div>
           </details>
         </section>
